# Kompass-scraping

./: README.md  kompass-cleaning.py  kompass-textiles-cleaned.csv  kompass-textiles.csv  kompass-visualizing.py  kompass.py
lambda/: kompass_scraping.py  kompass_scraping_updt.py  lambda_handler.py  pyproject.toml  readme.md
