[tool.poetry]
name = "kompass-scraping"
version = "0.1.0"
description = ""
authors = ["dialguiba <dialguiba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.60"
bs4 = "^0.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
